# partal-gallery-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 001_initial_schema.sql
src/: api.rs  db.rs  logging.rs  main.rs  router.rs
