[package]
name = "partal-gallery-api"
version = "0.1.0"
edition = "2021"
description = "A small HTTP API that stores Partal user galleries in Postgres (a self-hosted replacement for Supabase)."
license = "Apache-2.0"
build = "build.rs"

[[bin]]
name = "partal-gallery-api"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.3", features = ["derive", "env"] }
dotenvy = "0.15"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"] }
subtle = "2"
time = { version = "0.3", features = ["macros", "formatting"] }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
